[package]
name = "nft_test"
version = "0.1.0"
authors = [ "Concordium <developers@concordium.com>" ]
edition = "2018"
license = "MPL-2.0"
description = "cis2-nft-project"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]

[dependencies]
concordium-std = {path = "../../concordium-rust-smart-contracts/concordium-std", default-features = false}
concordium-cis2 = {path = "../../concordium-rust-smart-contracts/concordium-cis2", default-features = false}
env_logger = "0.9.0"
log = "0.4.16"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"

